Use requirements.txt in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
               with: 
                 python-version: "3.12.7"
 
-            - name: install pytest 
-              run: pip install pytest
+            - name: install dependencies 
+              run: pip install -r requirements.txt
 
             - name: run tests
               run: pytest
